<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/ll_bottom_change_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="vertical">
        <com.dev.batchfinal.app_custom.MyCustomBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_oops"
            android:fontFamily="@font/outfit_regular"
            android:textSize="@dimen/_16ssp"
            android:textFontWeight="500"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/welcome_txt"/>

        <com.dev.batchfinal.app_custom.MyCustomMediumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subscription"
            android:fontFamily="@font/outfit_regular"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            android:textFontWeight="500"
            android:textAlignment="center"
            android:textColor="@color/welcome_txt_gry"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_got_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_2sdp"
            android:elevation="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/outfit_regular"
            android:outlineSpotShadowColor="#516634"
            android:text="@string/txt_got_it"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

</LinearLayout>