<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dev.batchfinal.app_modules.fragments.MealBatchFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_current_meal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        app:cardElevation="@dimen/_2sdp"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/meal_bg" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/cd_current_meal"
        android:layout_marginHorizontal="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true">
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_batch_meal_plan"
                android:layout_centerVertical="true"
                android:textColor="@color/welcome_txt"
                android:textSize="@dimen/_14ssp"/>
            <ImageView
                android:id="@+id/img_next"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/arrow_right"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gry"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/linearLayout2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true">
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_status"
                android:layout_centerVertical="true"
                android:textColor="@color/welcome_txt_gry"
                android:textSize="@dimen/_12ssp"/>
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status_active"
                android:text="@string/txt_status_active"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_active"
                android:textSize="@dimen/_12ssp"/>
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_freeze"
                android:visibility="gone"
                android:id="@+id/status_freeze"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_log_out"
                android:textSize="@dimen/_12ssp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gry"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/linearLayout2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true">
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_duration"
                android:layout_centerVertical="true"
                android:textColor="@color/welcome_txt_gry"
                android:textSize="@dimen/_12ssp"/>
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 weeks"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/welcome_txt"
                android:textSize="@dimen/_12ssp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gry"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/linearLayout2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true">
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_exp_date"
                android:layout_centerVertical="true"
                android:textColor="@color/welcome_txt_gry"
                android:textSize="@dimen/_12ssp"/>
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:id="@+id/tv_expiration"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/04/2024"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/welcome_txt"
                android:textSize="@dimen/_12ssp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gry"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/linearLayout2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true">
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_delivery_days"
                android:layout_centerVertical="true"
                android:textColor="@color/welcome_txt_gry"
                android:textSize="@dimen/_12ssp"/>
            <com.dev.batchfinal.app_custom.MyCustomBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4/14"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/welcome_txt"
                android:textSize="@dimen/_12ssp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_10sdp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:backgroundTint="#516634"
            android:text="@string/txt_change"
            android:layout_marginEnd="@dimen/_5sdp"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_2sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_freeze"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:text="@string/txt_freeze"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textAllCaps="false"
            android:textColor="@color/terms_color"
            android:textSize="@dimen/_12ssp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_unfreeze"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:text="@string/txt_un_freeze"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textAllCaps="false"
            android:textColor="@color/terms_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


</RelativeLayout>