<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.activity.ComplateWorkoutActivity">

    <LinearLayout
        android:id="@+id/exercise_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/done_bg"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/rel_weight_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/exercise_image"
        android:layout_marginTop="-100dp"
        android:background="@drawable/rounded_bg_main"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">

        <!--        <ScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:scrollbars="none">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_complete"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/complete_icon" />

            <com.example.bottomanimationmydemo.custom.MyCustomTextView
                android:id="@+id/weight_loss_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/txt_thank_statement"
                android:textAlignment="center"
                android:textColor="@color/welcome_txt"
                android:textSize="@dimen/_14ssp" />

            <com.example.bottomanimationmydemo.custom.MyCustomTextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:fontFamily="@font/outfit_semi_bold"
                android:text="@string/txt_thank_content"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_10ssp" />

            <com.example.bottomanimationmydemo.custom.MyCustomTextView
                android:id="@+id/txt_exercise_summery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/txt_like_statement"
                app:fontFamily="@font/outfit_semi_bold"
                android:textColor="@color/welcome_txt"
                android:textFontWeight="500"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_order_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_go_to_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="#516634"
                android:elevation="@dimen/_2sdp"
                android:padding="@dimen/_2sdp"
                android:fontFamily="@font/outfit_semi_bold"
                android:text="@string/txt_go_home"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>